<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/vk"
    android:gravity="top"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".VikzGallery">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/img1"
        android:src="@drawable/a" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="-5dp"
        android:text="@string/vikky"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/blue"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="38dp"
        android:layout_below="@+id/imageView1"
        android:layout_alignEnd="@+id/imageView1"
        android:layout_alignRight="@+id/imageView1"
        android:layout_marginTop="-4dp"
        android:layout_marginEnd="0dp"
        android:layout_marginRight="0dp"
        android:text="@string/mesg"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="57dp"
        android:layout_marginRight="30dp"
        android:text="@string/dot"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/Olive"
        android:textSize="16sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="-5dp"
        android:text="@string/back" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="-5dp"
        android:text="@string/nxt" />

</RelativeLayout>
